Turn off C extensions (add second argument to _Static_assert)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,5 +60,6 @@ target_link_options(kernel PRIVATE
     ${OPTIMIZATION_FLAGS}
 )
 set_target_properties(kernel PROPERTIES
+    C_EXTENSIONS OFF
     LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/link.ld
 )
