Build the userspace program with CMake + add and call main.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,9 @@ set_target_properties(kernel PROPERTIES
     C_EXTENSIONS OFF
     LINK_DEPENDS ${CMAKE_SOURCE_DIR}/src/link.ld
 )
+
+
+###############
+## Userspace ##
+###############
+add_subdirectory(user)
