--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_executable(kernel
 
     src/list.c
     src/mutex.c
+    src/semaphore.c
 )
 target_compile_options(kernel PRIVATE
     -Wall -Wextra
