--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ add_executable(kernel
     src/list.c
     src/mutex.c
     src/semaphore.c
+    src/queue.c
 )
 target_compile_options(kernel PRIVATE
     -Wall -Wextra
