Move ahci.h, ahci.c, sata.h to src/disk/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ set(CMAKE_C_FLAGS_RELEASE "-O3")
 ############
 add_executable(kernel
     src/main.c
-    src/ahci.c
+
+    src/disk/ahci.c
     src/elf.c
     src/framebuf.c
     src/gdt.c
