Use devdrv to enumerate devices and load drivers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(CMAKE_C_FLAGS_RELEASE "-O3 -g")
 add_executable(kernel
     src/main.c
 
+    src/devdrv.c
     src/disk/ahci.c
     src/elf.c
     src/framebuf.c
