AHCI: support multiple controllers and ports; add devdrv and disk abstraction layers
- devdrv manages device enumeration and driver loading
- disk abstracts away low-level block I/O drivers

Closes #4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,11 @@ add_executable(kernel
 
     src/devdrv.c
     src/disk/ahci.c
+    src/disk/disk.c
     src/elf.c
     src/framebuf.c
     src/gdt.c
-    src/gpt.c
+    # src/gpt.c
     src/heap.c
     src/idt.c
     src/kbd.c
