--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(CMAKE_C_FLAGS_RELEASE "-O3 -g")
 add_executable(kernel
     src/main.c
 
+    src/acpi/acpi.c
     src/blkdev/ahci.c
     src/blkdev/blkdev.c
     src/devmgr.c
