Add Local and I/O APICs support
See #8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(kernel
     src/main.c
 
     src/acpi/acpi.c
+    src/acpi/apic.c
     src/blkdev/ahci.c
     src/blkdev/blkdev.c
     src/cpu.c
