Add module init.c for initial processor tasks
See #14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(kernel
     # src/gpt.c
     src/heap.c
     src/idt.c
+    src/init.c
     src/kbd.c
     src/kprintf.c
     src/mbi.c
