Add ksharg: argument parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_executable(kernel
 
     src/kshell/cmd.c
     src/kshell/kbdlog.c
+    src/kshell/ksharg.c
     src/kshell/kshell.c
     src/kshell/kshscan.c
     src/kshell/vasview.c
