kshell: reimplement 'devmgr' and 'pci' as a single 'devmgr' command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ add_executable(kernel
     src/vmm.s
 
     src/kshell/cmd.c
+    src/kshell/cmd/ksh_devmgr.c
     src/kshell/cmd/ksh_mbi.c
     src/kshell/cmd/ksh_taskmgr.c
     src/kshell/cmd/ksh_vasview.c
