--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_executable(kernel
 
     src/kshell/cmd.c
     src/kshell/cmd/ksh_devmgr.c
+    src/kshell/cmd/ksh_help.c
     src/kshell/cmd/ksh_mbi.c
     src/kshell/cmd/ksh_taskmgr.c
     src/kshell/cmd/ksh_vasview.c
