kshell: add command 'vfs' to interact with the VFS system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ add_executable(kernel
     src/kshell/kshcmd/ksh_mbi.c
     src/kshell/kshcmd/ksh_taskmgr.c
     src/kshell/kshcmd/ksh_vasview.c
+    src/kshell/kshcmd/ksh_vfs.c
     src/kshell/kshell.c
     src/kshell/kshscan.c
     src/kshell/vasview.c
